--- a/assets/scss/_po.scss
+++ b/assets/scss/_po.scss
@@ -1,6 +1,110 @@
 // ? @@@@@@@@@@@@@@@@@@@@@@[  example start  ]@@@@@@@@@@@@@@@@@@@@@@
 // [data-page-name=example] {
     @include media-breakpoint(basic) {
+        .bgBlack {
+            background-color: black;
+        }
+        .registerPage {
+            & .registerForm {
+                & .registerHeading {
+                    color: white;
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                & .inputFiled {
+                    & .form-control {
+                        border: none;
+                        border-radius: 20px;
+                        background-color: #3a3a3a !important;
+                        color: rgb(219, 219, 219) !important;
+                        height: 50px;
+                        &::placeholder {
+                            color: rgb(219, 219, 219) !important;
+                            font-weight: 500;
+                        }
+                    }
+                    
+                }
+                & .userAgreement {
+                    & .userAgreementIcon{
+                        width: 20px;
+                        height: 20px;
+                        background-color: #00ff11;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 100%;
+                        padding: 4px;
+                    }
+                    & .userAgreementText {
+                        color: white;
+                        font-size: 14px;
+                        & a {
+                            color: #00ff11;
+                        }
+                    }
+                }
+                & .RegisteLarge {
+                    color: White;
+                    font-weight: 600 !important;
+                    font-size: 20px;
+                    background-color: #00ff11;
+                    padding: 4px 15px;
+                    border-radius: 50px;
+                    max-width: 200px;
+                    width: 100%;
+                }
+            }
+        }
+        .products {
+            & .productsHeading {
+                font-size: 18px;
+                font-weight: 500;
+                color: white;
+            }
+            & .productItem {
+                & .productsImg {
+                    width: 100%;
+                    // height: 200px;
+
+                }
+                & .productText {
+                    font-size: 14px;
+                    font-weight: 400;
+                    text-align: center;
+                    color: white;
+                    border-radius: 20px;
+                    background-color: #3a3a3a;
+                }
+                & .productIcon {
+                    
+                }
+            }
+        }
+
+
+
+        .aboutUs {
+            & .aboutUsHeading {
+                font-size: 18px;
+                color: white;
+                font-weight: 600;
+            }
+            & .aboutUsMainHeading {
+                font-size: 24px;
+                font-weight: 600;
+                color: white;
+            }
+            & .aboutUspara {
+                font-size: 16px;
+                font-weight: 400;
+                color: white;
+            }
+            & .aboutUsImg {
+                margin: auto;
+                max-width: 200px;
+            }
+        }
     }
 
     // No media query necessary for xs breakpoint as it's effectively `@media (min-width: 0) { ... }`
