--- a/assets/scss/_po.scss
+++ b/assets/scss/_po.scss
@@ -62,29 +62,30 @@
         .productsSection {
             & .products {
                 & .productsHeading {
-                    font-size: 18px;
+                    font-size: 30px;
                     font-weight: 500;
                     color: white;
                 }
                 & .productItem {
                     & .productsImg {
-                        max-width: 300px;
+                        // max-width: 300px;
                         width: 100%;
                         margin: auto;
     
                     }
                     & .productText {
-                        font-size: 14px;
+                        font-size: 24px;
                         font-weight: 400;
                         text-align: center;
                         color: white;
                         border-radius: 20px;
                         background-color: #3a3a3a;
+                        padding: 44px !important;
                     }
                     & .productIcon {
-                        width: 50px;
-                        height: 50px;
-                        margin: -15px auto 0px auto;
+                        width: 70px;
+                        height: 70px;
+                        margin: -25px auto 0px auto;
                     }
                 }
             }
@@ -100,11 +101,11 @@
                 & .greenButton {
                     color: White;
                         font-weight: 600 !important;
-                        font-size: 20px;
+                        font-size: 26px;
                         background-color: #00ff11;
-                        padding: 4px 15px;
+                        padding: 10px 15px;
                         border-radius: 50px;
-                        max-width: 200px;
+                        max-width: 340px;
                         width: 100%;
                         margin: auto;
                         text-transform: uppercase;
@@ -117,23 +118,23 @@
         .aboutSection {
             & .aboutUs {
                 & .aboutUsHeading {
-                    font-size: 18px;
+                    font-size: 30px;
                     color: white;
                     font-weight: 600;
                 }
                 & .aboutUsMainHeading {
-                    font-size: 24px;
-                    font-weight: 600;
+                    font-size: 64px;
+                    font-weight: 700;
                     color: white;
                 }
                 & .aboutUspara {
-                    font-size: 16px;
+                    font-size: 26px;
                     font-weight: 400;
                     color: white;
                 }
                 & .aboutUsImg {
                     margin: auto;
-                    max-width: 200px;
+                    max-width: 300px;
                 }
             }
         }
@@ -152,15 +153,103 @@
     @include media-breakpoint-up(xxl) {}
 
 
-    @include media-breakpoint-down(xxl) {}
+    @include media-breakpoint-down(xxl) {
+        .productsSection {
+            & .products {
+                & .productsHeading {
+                }
+                & .productItem {
+                    & .productsImg {
+    
+                    }
+                    & .productText {
+                    }
+                    & .productIcon {
+                    }
+                }
+            }
+        }
 
-    @include media-breakpoint-down(xl) {}
+        .giveAwaySection {
+            & .giveAway {
+                & .giveAwayImg {
+    
+                }
+                & .greenButton {
+                }
+            }
+        }
+        
+        .aboutSection {
+            & .aboutUs {
+                & .aboutUsHeading {
+                }
+                & .aboutUsMainHeading {
+                }
+                & .aboutUspara {
+                    font-size: 21px;
+                }
+                & .aboutUsImg {
+                }
+            }
+        }
+    }
+
+    @include media-breakpoint-down(xl) {
+        .productsSection {
+            & .products {
+                & .productsHeading {
+                    font-size: 26px;
+                }
+                & .productItem {
+                    & .productsImg {
+    
+                    }
+                    & .productText {
+                        padding: 30px !important;
+                        font-size: 16px;
+                    }
+                    & .productIcon {
+                        width: 50px;
+                        height: 50px;
+                        margin: -20px auto 0px auto;
+                    }
+                }
+            }
+        }
+
+        .giveAwaySection {
+            & .giveAway {
+                & .giveAwayImg {
+    
+                }
+                & .greenButton {
+                }
+            }
+        }
+        
+        .aboutSection {
+            & .aboutUs {
+                & .aboutUsHeading {
+                    font-size: 26px;
+                }
+                & .aboutUsMainHeading {
+                    font-size: 44px;
+                }
+                & .aboutUspara {
+                    font-size: 16px;
+                }
+                & .aboutUsImg {
+                }
+            }
+        }
+    }
 
     @include media-breakpoint-down(lg) {
         .productsSection {
             & .products {
                 & .productsHeading {
-                    font-size: 16px;
+                    font-size: 20px;
                 }
                 & .productItem {
                     & .productsImg {
@@ -192,15 +281,17 @@
         .aboutSection {
             & .aboutUs {
                 & .aboutUsHeading {
-                    font-size: 18px;
+                    font-size: 20px;
                 }
                 & .aboutUsMainHeading {
-                    font-size: 20px;
+                    font-size: 34px;
                 }
                 & .aboutUspara {
                     font-size: 13px;
                 }
                 & .aboutUsImg {
+                    max-width: 200px;
+                    width: 100%;
                 }
             }
         }
@@ -217,7 +308,8 @@
     
                     }
                     & .productText {
-                        font-size: 10px;
+                        font-size: 12px;
+                        padding: 15px !important;
                     }
                     & .productIcon {
                         width: 30px;
@@ -246,10 +338,10 @@
                     font-size: 14px;
                 }
                 & .aboutUsMainHeading {
-                    font-size: 18px;
+                    font-size: 28px;
                 }
                 & .aboutUspara {
-                    font-size: 10px;
+                    font-size: 12px;
                 }
                 & .aboutUsImg {
                     width: 150px;
@@ -290,6 +382,7 @@
                 & .aboutUsHeading {
                 }
                 & .aboutUsMainHeading {
+                    font-size: 22px;
                 }
                 & .aboutUspara {
                 }
