--- a/assets/scss/_pr.scss
+++ b/assets/scss/_pr.scss
@@ -1,7 +1,7 @@
 // ? @@@@@@@@@@@@@@@@@@@@@@[  example start  ]@@@@@@@@@@@@@@@@@@@@@@
     @include media-breakpoint(basic) {
         body main {
-            background-image: linear-gradient(to right, #000000, #130618);
+            background-image: linear-gradient(to right, #000000 ,#000000 ,#000000, #2b1730 , #432847, #2b1730 );
             // background-color: #130618;
         }
         .topnavBar {
@@ -39,6 +39,13 @@
                 margin-top: 20px;
                 & img {
                     height: 60px;
+                }
+            }
+            & .videoCol {
+                // overflow: hidden;
+                & video {
+                    transform: scale(1.25);
+                    mix-blend-mode: screen;
                 }
             }
             & .heading {
@@ -101,7 +108,7 @@
                     border-color: #17f026; 
                     border-radius: 2px;
                     animation: scrolldown 2s ease-in-out infinite;
-                    transform: translateY(0%) rotate(45deg);
+                    transform: translateY(0%) translateX(-50%) rotate(45deg);
                     position: absolute;
                     left: 50%;
                     &:last-child {
@@ -115,13 +122,13 @@
                 }
                 @keyframes scrolldown {
                     0%{
-                        transform: translateY(-10px) rotate(45deg);
+                        transform: translateY(-10px) translateX(-50%) rotate(45deg);
                     }
                     50%{
-                        transform: translateY(0) rotate(45deg);
+                        transform: translateY(0) translateX(-50%) rotate(45deg);
                     }
                     100%{
-                        transform: translateY(-10px) rotate(45deg);
+                        transform: translateY(-10px) translateX(-50%) rotate(45deg);
                     }
                 }
             }
@@ -173,7 +180,7 @@
             border-style: solid; 
             border-color: #767377; 
             border-radius: 2px;
-            animation: scrolldown 2s ease-in-out infinite;
+            animation: scrollup 2s ease-in-out infinite;
             transform: translateY(0%) rotate(45deg);
             position: absolute;
             left: 50%;
@@ -186,7 +193,7 @@
                 top: 25px;
             }
         }
-        @keyframes scrolldown {
+        @keyframes scrollup {
             0%{
                 transform: translateY(-10px) rotate(45deg);
             }
@@ -351,6 +358,7 @@
         }
         .heroSection {
             height: auto !important;
+            padding-bottom: 50px;
             & .logo {
                 margin-top: 30px;
                 text-align: center;
