--- a/assets/scss/_su.scss
+++ b/assets/scss/_su.scss
@@ -20,15 +20,17 @@
                             object-fit: contain;
                         }
                         & .cardHeadig {
-                            font-size: 35px;
+                            font-size: 30px;
+                            margin-bottom: 25px;
                             font-weight: 500;
                             color: #fe7a1c;
                         }
                         & .cardText {
                             & span {
-                                font-size: 27px;
+                                font-size: 24px;
                                 font-weight: 300;
                                 color: #fff;
+                                font-style: italic;
                             }
                         }
                     }
@@ -37,25 +39,39 @@
         }
         .partnersSection {
             padding: 20px;
-            // background-color: black;
             & .partnersSectionInner {
                 padding-top: 50px;
                 padding-bottom: 50px;
             }
             & .sectionHeading {
-                padding-left: 50px;
                 font-size: 52px;
                 font-weight: 600;
                 color: #fff;
                 text-align: left;
             }
             & .card {
-                border: none !important;
-                border-radius: 2rem;
+                border: 0 !important;
+                border-radius: 1rem;
                 overflow: hidden;
                 height: 190px;
+                padding: 2.5rem;
+                background-color: #392c3e;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                transition: 0.3s ease-in-out;
+                &:hover {
+                    transform: scale(0.9);
+                }
                 & img {
-                    object-fit: cover;
+                    object-fit: contain;
+                    width: 100%;
+                    height: 100%;
+                    max-height: 30px;
+                    &.bigImg {
+                        max-height: 50px;
+                    }
                 }
             }
         }
@@ -63,15 +79,13 @@
             padding: 20px 30px 150px 30px;
             // background-color: black;
             & .imgOuter {
-                height: 50px;
+                // height: 50px;
                 margin-bottom: 50px;
             }
             & .footerText {
                 color: #fff;
-                font-size: 25px;
-                font-weight: 500;
+                font-size: 24px;
                 text-align: center;
-                border: 2px solid #fff;
                 border-radius: 80px;
                 background-color: #29262a;
                 padding: 15px;
@@ -92,18 +106,249 @@
 
 
     @include media-breakpoint-down(xxl) {
+        
+        .whyGambleOnDambleSection {
+            & .sectionHeading {
+            }
+            & .whyCardOuter {
+                & .whyCardInner {
+                    & .whyCard {
+                        & img {
+                        }
+                        & .cardHeadig {
+                        }
+                        & .cardText {
+                            & span {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+        .partnersSection {
+            & .partnersSectionInner {
+            }
+            & .sectionHeading {
+            }
+            & .card {
+                &:hover {
+                }
+                & img {
+                    &.bigImg {
+                    }
+                }
+            }
+        }
+        
+        .footer {
+            & .imgOuter {
+            }
+            & .footerText {
+                font-size: 22px;
+            }
+        }
     }
 
     @include media-breakpoint-down(xl) {
+        .whyGambleOnDambleSection {
+            & .sectionHeading {
+                font-size: 54px;
+            }
+            & .whyCardOuter {
+                & .whyCardInner {
+                    & .whyCard {
+                        & img {
+                        }
+                        & .cardHeadig {
+                            font-size: 24px;
+                        }
+                        & .cardText {
+                            & span {
+                                font-size: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .partnersSection {
+            & .partnersSectionInner {
+                padding-bottom: 0;
+            }
+            & .sectionHeading {
+            }
+            & .card {
+                &:hover {
+                }
+                & img {
+                    &.bigImg {
+                    }
+                }
+            }
+        }
+        .footer {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            & .imgOuter {
+                margin-bottom: 20px;
+            }
+            & .footerText {
+                font-size: 20px;
+            }
+        }
     }
 
     @include media-breakpoint-down(lg) {
+        .whyGambleOnDambleSection {
+            & .sectionHeading {
+                font-size: 40px;
+            }
+            & .whyCardOuter {
+                & .whyCardInner {
+                    & .whyCard {
+                        & img {
+                            width: 90% !important;
+                        }
+                        & .cardHeadig {
+                            font-size: 22px;
+                            margin-bottom: 15px;
+                        }
+                        & .cardText {
+                            & span {
+                                font-size: 18px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .partnersSection {
+            & .partnersSectionInner {
+                padding-top: 25px;
+            }
+            & .sectionHeading {
+                font-size: 20px;
+            }
+            & .card {
+                height: 150px;
+                &:hover {
+                }
+                & img {
+                    &.bigImg {
+                    }
+                }
+            }
+        }
+        .footer {
+            & .imgOuter {
+            }
+            & .footerText {
+                font-size: 18px;
+            }
+        }
     }
 
     @include media-breakpoint-down(md) {
+        .whyGambleOnDambleSection {
+            & .sectionHeading {
+                font-size: 32px;
+                margin-bottom: 20px;
+            }
+            & .whyCardOuter {
+                & .whyCardInner {
+                    text-align: center;
+                    & .whyCard {
+                        & img {
+                            width: 75% !important;
+                        }
+                        & .cardHeadig {
+                            margin-top: 20px;
+                            font-size: 20px;
+                        }
+                        & .cardText {
+                            & span {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .partnersSection {
+            & .partnersSectionInner {
+                padding-top: 5px;
+            }
+            & .sectionHeading {
+                font-size: 20px;
+                font-weight: 700;
+                margin-bottom: 15px;
+                text-align: center;
+            }
+            & .card {
+                height: 100px;
+                border-radius: 15px;
+                padding: 1.5rem;
+                &:hover {
+                }
+                & img {
+                    &.bigImg {
+                    }
+                }
+            }
+        }
+        .footer {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            & .imgOuter {
+            }
+            & .footerText {
+                border-radius: 15px;
+                padding: 15px;
+                font-size: 16px;
+            }
+        }
     }
 
     @include media-breakpoint-down(sm) {
+        .whyGambleOnDambleSection {
+            & .sectionHeading {
+            }
+            & .whyCardOuter {
+                & .whyCardInner {
+                    & .whyCard {
+                        & img {
+                        }
+                        & .cardHeadig {
+                        }
+                        & .cardText {
+                            & span {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .partnersSection {
+            & .partnersSectionInner {
+            }
+            & .sectionHeading {
+            }
+            & .card {
+                &:hover {
+                }
+                & img {
+                    &.bigImg {
+                    }
+                }
+            }
+        }
+        .footer {
+            & .imgOuter {
+            }
+            & .footerText {
+            }
+        }
     }
 // }
 
