--- a/assets/scss/_po.scss
+++ b/assets/scss/_po.scss
@@ -72,7 +72,7 @@
                         width: 100%;
                         margin: auto;
                         & .tiltImg {
-                            transform: rotate(-7deg);
+                            // transform: rotate(-7deg);
                         }
     
                     }
@@ -91,10 +91,10 @@
                             background-image: linear-gradient(to top, #040404, #3a3a3a);
                         }
                         &.prodcutBg2 {
-                            background-image: linear-gradient(to top, #09030b, #3a3a3a);
+                            background-image: linear-gradient(to top, #0b050d, #3a3a3a);
                         }
                         &.prodcutBg3 {
-                            background-image: linear-gradient(to top, #120516, #3a3a3a);
+                            background-image: linear-gradient(to top, #3e2442, #3a3a3a);
                         }
                     }
                     & .productIcon {
